<resources>
    <string name="app_name">TimeTracker</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="menu_navigation_view_help">Help</string>
    <string name="menu_navigation_view_feedback">Feedback</string>
    <string name="menu_navigation_view_settings">Settings</string>
    <string name="menu_navigation_view_more">More</string>
    <string name="menu_navigation_view_assess">Assess</string>
    <string name="menu_navigation_view_about">About</string>
    <string name="activity_main_drawer_layout_open">Open</string>
    <string name="activity_main_drawer_layout_close">Close</string>
    <string name="navigation_view_header_layout_text_view_morda">Morda Mordova</string>
    <string name="navigation_view_header_layout_text_view_email">mordovich@android.com</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_feed_back">FeedBackActivity</string>
    <string name="content_about_version">Version: 1.0.0.1</string>
    <string name="content_about_copyright_info">ⓒ Copyright Alexey Elkin and Kiril Kotov</string>
    <string name="content_about_extra_info">All rights Reserved</string>
    <string name="content_about_text_3">example@gmail.com</string>
    <string name="content_feed_back_text_2">Send a message to this address:</string>
    <string name="content_feed_back_text_1">To contact the Administrator,</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="content_help_default_text">HelpActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_assess">AssessActivity</string>
    <string name="content_assess_default_text">AssessActivity</string>
    <string name="content_settings_edit_information">Edit Information</string>
    <string name="content_settings_settings">Settings</string>
</resources>
