<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

<group android:checkableBehavior="single">
    <item
        android:title="@string/menu_navigation_view_help"
        android:icon="@drawable/ic_help_circle"
        android:id="@+id/menu_navigation_view_help"/>
    <item
        android:title="@string/menu_navigation_view_feedback"
        android:icon="@drawable/ic_email_open"
        android:id="@+id/menu_navigation_view_feedback"/>
    <item
        android:title="@string/menu_navigation_view_settings"
        android:icon="@drawable/ic_settings"
        android:id="@+id/menu_navigation_view_settings"/>
</group>
<item android:title="@string/menu_navigation_view_more">
    <menu>
        <item
            android:title="@string/menu_navigation_view_assess"
            android:icon="@drawable/ic_checkbox_multiple_marked"/>
        <item
            android:title="@string/menu_navigation_view_about"
            android:icon="@drawable/ic_account_box"/>

    </menu>
</item>
</menu>