<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.alxye.timetracker.AboutActivity"
    tools:showIn="@layout/activity_about"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="230dp"
        android:text="@string/app_name"
        android:textSize="22sp"
        android:textColor="#9fa8da"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content_about_version"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:textSize="19sp"
        android:textColor="#9fa8da"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:text="@string/content_about_copyright_info"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:textColor="#9fa8da"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/content_about_extra_info"
        android:textColor="#9fa8da"/>
</RelativeLayout>
