<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.alxye.timetracker.SettingsActivity"
    tools:showIn="@layout/activity_settings"
    android:orientation="vertical"
    android:padding="5dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:divider="@drawable/separator"
            android:showDividers="middle">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="6dp"
                android:paddingBottom="7dp">
                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:paddingTop="16dp"
                    app:srcCompat="@drawable/iu"
                    android:layout_weight="1"/>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="27dp"
                        android:text="@string/navigation_view_header_layout_text_view_morda"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:layout_gravity="bottom"/>

                    <TextView
                        android:id="@+id/textView"
                        android:layout_marginTop="50dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/navigation_view_header_layout_text_view_email" />
                </RelativeLayout>

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/content_settings_edit_information"
                style="@style/ButtonEdit"
                android:textColor="@color/colorPrimary"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="6dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/content_settings_settings"
                android:textSize="12sp"
                android:textStyle="bold"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
